--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.ts"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc && vercel dev"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@line/bot-sdk": "^9.7.1",
     "@supabase/supabase-js": "^2.48.1",
     "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "express": "^4.21.2"
   },
   "devDependencies": {
