--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@line/bot-sdk": "^9.7.1",
     "@supabase/supabase-js": "^2.48.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "express": "^4.21.2"
